# remote-embedding

./: API.md  CLAUDE.md  DEPLOYMENT.md  example_base64.py  example_usage.py  main.py  main_batched.py  pyproject.toml  run_batched.sh  test_api.py  test_batch.py
