[project]
name = "remote-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "modelscope>=1.34.0",
    "pillow>=12.1.0",
    "transformers==4.51.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
